<resources>
    <string name="app_name">Daily Achievement List</string>
    <string name="title_today">Today</string>
    <string name="title_calendar">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="pref_goal">Goal</string>
    <string name="pref_file">SharedPrefFile</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_notification_type">notification_type</string>
    <string name="pref_notification_time">notification_time</string>
    <string name="pref_notification_start_time">notificationStartTime</string>
    <string name="pref_notification_end_time">notificationEndTime</string>
    <string name="pref_notification_interval">NotificationInterval</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_donate">donate</string>
    <string name="pref_feedback">feedback</string>
    <string name="pref_share">share</string>
    <string name="pref_reset">reset_pref</string>


    <string name="def_goal">5</string>
</resources>