<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="General">
        <ListPreference
            app:key="@string/pref_goal"
            app:title="Daily Goal"
            app:entries="@array/one_to_ten"
            app:entryValues="@array/one_to_ten"
            app:defaultValue="@string/def_goal"
            app:useSimpleSummaryProvider="true"/>
        <Preference
            app:key="@string/pref_reset"
            app:title="Reset Preferences"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="Notification">
        <ListPreference
            app:defaultValue="off"
            app:key="@string/pref_notification_type"
            app:title="Notification Type"
            app:entries="@array/notification_style_entities"
            app:entryValues="@array/notification_style_values"
            app:useSimpleSummaryProvider="true"/>

        <com.zeta.dailyachievementlist.ui.customPref.TimePreference
            app:title="Notification Time"
            app:key="@string/pref_notification_time" />

        <ListPreference
            app:entryValues="@array/one_to_ten"
            app:entries="@array/one_to_ten"
            app:key="@string/pref_notification_interval"
            app:title="Notification Interval(Hours)"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="3"/>

        <com.zeta.dailyachievementlist.ui.customPref.TimePreference
            app:key="@string/pref_notification_start_time"
            app:title="Start Time"
            app:defaultValue="540"/>

        <com.zeta.dailyachievementlist.ui.customPref.TimePreference
            app:key="@string/pref_notification_end_time"
            app:title="End Time"
            app:defaultValue="1260"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Appearance">
        <ListPreference
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/pref_theme"
            app:title="Theme"
            android:defaultValue="system_default"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>